# beer-game

./: .gitignore  Beer Game - Profiles.docx  README.md  requirements-frontend.txt  requirements.txt
.cursor/: rules.md
beergame/: .gitignore  readme.md
docs/: ARCHITECTURE.md  COMPREHENSIVE_PLAN.md  FRAMEWORKS.md  MENTAL_MODELS.md  PLAN.md  PRD.md  PROFILES.md
examples/: info_symmetry_experiment.py  profile_comparison.py  quickstart.py  random_profile_demo.py
frontend/: app.py  index.html
frontend/pages/: help.py
notebooks/: 00_quickstart.ipynb  01_profiles_mixture_template.ipynb  02_profile_randomization_demo.ipynb
profiles-beergame/: pyproject.toml  requirements.txt
profiles-beergame/src/profiles_beergame/: __init__.py  interfaces.py
profiles-beergame/src/profiles_beergame/agents/: aggressive_growth_hacker.py  antifragile_adapter.py  bayesian_updater.py  conservative_custodian.py  human_agent.py  info_aware.py  inverter.py  myopic_firefighter.py  passive_pipeline.py  production_smoother.py  profile_randomizer.py  random_baseline.py  rational_analyst.py  rl_agent.py  signal_chaser.py  stabilizer.py
profiles-beergame/src/profiles_beergame/engine/: demand_patterns.py  simulation.py
profiles-beergame/src/profiles_beergame/metrics/: analytics.py
profiles-beergame/src/profiles_beergame/plots/: plotting.py
tests/: test_agents.py  test_app.py
tools/: extract_profiles.py
